Changes for 1.0.10

 - [ZBX-623] fixed incorrect processing of function abschange() for integers (Sasha)

Changes for 1.0.9

 - [NTD-43] fixed wrong help links by pointing to correct page with manual (Artem)

Changes for 1.0.8

 - [NTD-42] fixed pages error (Artem)
 - [NTD-39] fixed filter reset button (Artem)

Changes for 1.0.7

 - [NTD-41] fixed popup menu (Artem)
 - [NTD-29] fixed popup menu (Artem)

Changes for 1.0.6

 - [NTD-37] fixed fonts in the maps (Artem)
 - [ZBX-619] fixed agent crash for system.uptime under Solaris 2.5.1 (Sasha)
 - [ZBX-610] fixed memory leak in external checks (Sasha)

Changes for 1.0.5

 - [NTD-34] fixed problem with net.tcp.dns under AIX (Sasha)

Changes for 1.0.4

 - [NTD-26] fixed problem with iconv under AIX (Sasha)

Changes for 1.0.3

 - [NTD-36] fixed template linkage (Artem)
 - [NTD-28] fixed errors on maps (Artem)

Changes for 1.0.2

 - [DEV-137] fixed call DBfree_resut before return from send_list_of_active_checks (Sasha)

Changes for 1.0.1:

 - [DEV-230] changed ZABBIX notation to ZABICOM (Sasha)
 - [ZBX-602] fixed possible incorrect trigger evaluation if value sotred as "delta" (Sasha)

Changes for 1.0.0:

 - [DEV-242] added improved map configuration (Artem)
 - [DEV-250] added support of vm.memory.size under AIX (Sasha)
 - [DEV-250] added full support of proc.num/mem under Linux 2.4/2.6, Solaris and AIX (Sasha)
 - [ZBX-586] added simple check tcp_perf into help_items (Sasha)
 - [DEV-250] added support of vfs.dev.read/write under Linux 2.4/2.6 (Sasha)
 - [DEV-249] added support of advanced regular expressions (Artem,Sasha)
 - [DEV-240] added the type selection function for Triggers message display on MAP (Artem)
 - [DEV-241] added configurable message for displaying problems on maps (Artem)
 - [DEV-243] added monitoring-triggers display option (Artem)
 - DM: fixed dbschema for maintenance_* tables (Sasha)
 - [DEV-247] added enhancement to the Graph function (Artem)