@@ -18,352 +18,87 @@
 **/
 
 #include "common.h"
-
 #include "sysinfo.h"
-
-#include "md5.h"
-
-
-/* Solaris. */
-#ifndef HAVE_SYSINFO_FREESWAP
-#ifdef HAVE_SYS_SWAP_SWAPTABLE
-void get_swapinfo(double *total, double *fr)
-{
-	register int cnt, i, page_size;
-/* Support for >2Gb */
-/*	register int t, f;*/
-	double	t, f;
-	struct swaptable *swt;
-	struct swapent *ste;
-	static char path[256];
-
-	/* get total number of swap entries */
-	cnt = swapctl(SC_GETNSWP, 0);
-
-	/* allocate enough space to hold count + n swapents */
-	swt = (struct swaptable *)malloc(sizeof(int) +
-		cnt * sizeof(struct swapent));
-
-	if (swt == NULL)
-	{
-		*total = 0;
-		*fr = 0;
-		return;
-	}
-	swt->swt_n = cnt;
-
-/* fill in ste_path pointers: we don't care about the paths, so we
-point them all to the same buffer */
-	ste = &(swt->swt_ent[0]);
-	i = cnt;
-	while (--i >= 0)
-	{
-		ste++->ste_path = path;
-	}
-
-	/* grab all swap info */
-	swapctl(SC_LIST, swt);
-
-	/* walk thru the structs and sum up the fields */
-	t = f = 0;
-	ste = &(swt->swt_ent[0]);
-	i = cnt;
-	while (--i >= 0)
-	{
-		/* dont count slots being deleted */
-		if (!(ste->ste_flags & ST_INDEL) &&
-		!(ste->ste_flags & ST_DOINGDEL))
-		{
-			t += ste->ste_pages;
-			f += ste->ste_free;
-		}
-		ste++;
-	}
-
-	page_size=getpagesize();
-
-	/* fill in the results */
-	*total = page_size*t;
-	*fr = page_size*f;
-	free(swt);
-}
-#endif
-#endif
-
-static int	SYSTEM_SWAP_FREE(const char *cmd, const char *param, unsigned flags, AGENT_RESULT *result)
-{
-#ifdef HAVE_SYSINFO_FREESWAP
-	struct sysinfo info;
-
-	assert(result);
-
-        init_result(result);
-
-	if( 0 == sysinfo(&info))
-	{
-#ifdef HAVE_SYSINFO_MEM_UNIT
-		SET_UI64_RESULT(result, (zbx_uint64_t)info.freeswap * (zbx_uint64_t)info.mem_unit);
-#else
-		SET_UI64_RESULT(result, info.freeswap);
-#endif
-		return SYSINFO_RET_OK;
-	}
-	else
-	{
-		return SYSINFO_RET_FAIL;
-	}
-/* Solaris */
-#else
-#ifdef HAVE_SYS_SWAP_SWAPTABLE
-	double swaptotal,swapfree;
-
-	assert(result);
-
-        init_result(result);
-
-	get_swapinfo(&swaptotal,&swapfree);
-
-	SET_UI64_RESULT(result, swapfree);
-	return SYSINFO_RET_OK;
-#else
-	assert(result);
-
-        init_result(result);
-
-	return	SYSINFO_RET_FAIL;
-#endif
-#endif
-}
-
-static int	SYSTEM_SWAP_TOTAL(const char *cmd, const char *param, unsigned flags, AGENT_RESULT *result)
-{
-#ifdef HAVE_SYSINFO_TOTALSWAP
-	struct sysinfo info;
-
-	assert(result);
-
-        init_result(result);
-
-	if( 0 == sysinfo(&info))
-	{
-#ifdef HAVE_SYSINFO_MEM_UNIT
-		SET_UI64_RESULT(result, (zbx_uint64_t)info.totalswap * (zbx_uint64_t)info.mem_unit);
-#else
-		SET_UI64_RESULT(result, info.totalswap);
-#endif
-		return SYSINFO_RET_OK;
-	}
-	else
-	{
-		return SYSINFO_RET_FAIL;
-	}
-/* Solaris */
-#else
-#ifdef HAVE_SYS_SWAP_SWAPTABLE
-	double swaptotal,swapfree;
-
-	assert(result);
-
-        init_result(result);
-
-	get_swapinfo(&swaptotal,&swapfree);
-	
-	SET_UI64_RESULT(result, swaptotal);
-	return SYSINFO_RET_OK;
-#else
-	assert(result);
-
-        init_result(result);
-
-	return	SYSINFO_RET_FAIL;
-#endif
-#endif
-}
-
-static int	SYSTEM_SWAP_PFREE(const char *cmd, const char *param, unsigned flags, AGENT_RESULT *result)
-{
-	AGENT_RESULT	result_tmp;
-        zbx_uint64_t  tot_val = 0;
-        zbx_uint64_t  free_val = 0;
-
-        assert(result);
-
-        init_result(result);
-        init_result(&result_tmp);
-
-	if(SYSTEM_SWAP_TOTAL(cmd, param, flags, &result_tmp) != SYSINFO_RET_OK ||
-		!(result_tmp.type & AR_UINT64))
-	                return  SYSINFO_RET_FAIL;
-	tot_val = result_tmp.ui64;
-
-	/* Check fot division by zero */
-	if(tot_val == 0)
-	{
-		free_result(&result_tmp);
-                return  SYSINFO_RET_FAIL;
-	}
-
-	if(SYSTEM_SWAP_FREE(cmd, param, flags, &result_tmp) != SYSINFO_RET_OK ||
-		!(result_tmp.type & AR_UINT64))
-                	return  SYSINFO_RET_FAIL;
-	free_val = result_tmp.ui64;
-
-	free_result(&result_tmp);
-
-	SET_DBL_RESULT(result, (100.0 * (double)free_val) / (double)tot_val);
-
-        return SYSINFO_RET_OK;
-}
-
-static int	SYSTEM_SWAP_PUSED(const char *cmd, const char *param, unsigned flags, AGENT_RESULT *result)
-{
-	AGENT_RESULT	result_tmp;
-        zbx_uint64_t  tot_val = 0;
-        zbx_uint64_t  free_val = 0;
-
-        assert(result);
-
-        init_result(result);
-        init_result(&result_tmp);
-
-	if(SYSTEM_SWAP_TOTAL(cmd, param, flags, &result_tmp) != SYSINFO_RET_OK ||
-		!(result_tmp.type & AR_UINT64))
-                	return  SYSINFO_RET_FAIL;
-	tot_val = result_tmp.ui64;
-
-	/* Check fot division by zero */
-	if(tot_val == 0)
-	{
-		free_result(&result_tmp);
-                return  SYSINFO_RET_FAIL;
-	}
-
-	if(SYSTEM_SWAP_FREE(cmd, param, flags, &result_tmp) != SYSINFO_RET_OK ||
-		!(result_tmp.type & AR_UINT64))
-                	return  SYSINFO_RET_FAIL;
-	free_val = result_tmp.ui64;
-
-	free_result(&result_tmp);
-
-	SET_DBL_RESULT(result, 100.0-(100.0 * (double)free_val) / (double)tot_val);
-
-        return SYSINFO_RET_OK;
-}
 
 int	SYSTEM_SWAP_SIZE(const char *cmd, const char *param, unsigned flags, AGENT_RESULT *result)
 {
+/*
+ *  FreeBSD 7.0 i386
+ */
+	char		swapdev[64], mode[64];
+	int		mib[16], *mib_dev;
+	size_t		sz, mib_sz;
+	struct xswdev	xsw;
+	zbx_uint64_t	total = 0, used = 0;
 
-#define SWP_FNCLIST struct swp_fnclist_s
-SWP_FNCLIST
-{
-	char *mode;
-	int (*function)();
-};
-
-	SWP_FNCLIST fl[] = 
-	{
-		{"total",	SYSTEM_SWAP_TOTAL},
-		{"free",	SYSTEM_SWAP_FREE},
-		{"pfree",	SYSTEM_SWAP_PFREE},
-		{"pused",	SYSTEM_SWAP_PUSED},
-		{0,		0}
-	};
-
-	char swapdev[MAX_STRING_LEN];
-	char mode[MAX_STRING_LEN];
-	int i;
-	
         assert(result);
 
         init_result(result);
-	
-        if(num_param(param) > 2)
-        {
-                return SYSINFO_RET_FAIL;
-        }
 
-        if(get_param(param, 1, swapdev, sizeof(swapdev)) != 0)
-        {
-                return SYSINFO_RET_FAIL;
-        }
-
-        if(swapdev[0] == '\0')
-	{
-		/* default parameter */
-		zbx_snprintf(swapdev, sizeof(swapdev),"all");
-	}
-
-	if(strncmp(swapdev, "all", sizeof(swapdev)))
-	{
+	if (num_param(param) > 2)
 		return SYSINFO_RET_FAIL;
-	}
-	
-	if(get_param(param, 2, mode, sizeof(mode)) != 0)
-        {
-                mode[0] = '\0';
-        }
-	
-        if(mode[0] == '\0')
-	{
-		/* default parameter */
-		zbx_snprintf(mode, sizeof(mode), "free");
-	}
 
-	for(i=0; fl[i].mode!=0; i++)
+	if (0 != get_param(param, 1, swapdev, sizeof(swapdev)))
+		return SYSINFO_RET_FAIL;
+
+	if (0 != get_param(param, 2, mode, sizeof(mode)))
+		*mode = '\0';
+
+	sz = sizeof(mib) / sizeof(mib[0]);
+	if (-1 == sysctlnametomib("vm.swap_info", mib, &sz))
+		return FAIL;
+
+	mib_sz = sz + 1;
+	mib_dev = &(mib[sz]);
+
+	*mib_dev = 0;
+	sz = sizeof(xsw);
+
+	while (-1 != sysctl(mib, mib_sz, &xsw, &sz, NULL, 0))
 	{
-		if(strncmp(mode, fl[i].mode, MAX_STRING_LEN)==0)
+		if ('\0' == *swapdev || 0 == strcmp(swapdev, "all")	/* default parameter */
+				|| 0 == strcmp(swapdev, devname(xsw.xsw_dev, S_IFCHR)))
 		{
-			return (fl[i].function)(cmd, param, flags, result);
+			total += (zbx_uint64_t)xsw.xsw_nblks;
+			used += (zbx_uint64_t)xsw.xsw_used;
 		}
+		(*mib_dev)++;
 	}
-	
-	return SYSINFO_RET_FAIL;
-}
 
-int     OLD_SWAP(const char *cmd, const char *param, unsigned flags, AGENT_RESULT *result)
-{
-        char    key[MAX_STRING_LEN];
-        int     ret;
+	if ('\0' == *mode || 0 == strcmp(mode, "free"))	/* default parameter */
+	{
+		SET_UI64_RESULT(result, (total - used) * getpagesize());
+	}
+	else if (0 == strcmp(mode, "total"))
+	{
+		SET_UI64_RESULT(result, total * getpagesize());
+	}
+	else if (0 == strcmp(mode, "used"))
+	{
+		SET_UI64_RESULT(result, used * getpagesize());
+	}
+	else if (0 == strcmp(mode, "pfree"))
+	{
+		SET_DBL_RESULT(result, total ? ((double)(total - used) * 100.0 / (double)total) : 0.0);
+	}
+	else if (0 == strcmp(mode, "pused"))
+	{
+		SET_DBL_RESULT(result, total ? ((double)used * 100.0 / (double)total) : 0.0);
+	}
+	else
+		return SYSINFO_RET_FAIL;
 
-        assert(result);
-
-        init_result(result);
-
-        if(num_param(param) > 1)
-        {
-                return SYSINFO_RET_FAIL;
-        }
-
-        if(get_param(param, 1, key, MAX_STRING_LEN) != 0)
-        {
-                return SYSINFO_RET_FAIL;
-        }
-
-        if(strcmp(key,"free") == 0)
-        {
-                ret = SYSTEM_SWAP_FREE(cmd, param, flags, result);
-        }
-        else if(strcmp(key,"total") == 0)
-        {
-                ret = SYSTEM_SWAP_TOTAL(cmd, param, flags, result);
-        }
-        else
-        {
-                ret = SYSINFO_RET_FAIL;
-        }
-
-        return ret;
+	return SYSINFO_RET_OK;
 }
 
 int	SYSTEM_SWAP_IN(const char *cmd, const char *param, unsigned flags, AGENT_RESULT *result)
 {
-    /* in this moment this function for this platform unsupported */
-    return	SYSINFO_RET_FAIL;
+	/* in this moment this function for this platform unsupported */
+	return SYSINFO_RET_FAIL;
 }
 
 int	SYSTEM_SWAP_OUT(const char *cmd, const char *param, unsigned flags, AGENT_RESULT *result)
 {
-    /* in this moment this function for this platform unsupported */
-    return	SYSINFO_RET_FAIL;
+	/* in this moment this function for this platform unsupported */
+	return SYSINFO_RET_FAIL;
 }
-
